# zdppy_file

./: .gitignore  README.md  pyproject.toml
zdpapi_file/: directory.py  directory_test.py  office_doc.py
