[tool.poetry]
name = "zdpapi_file"
version = "0.1.0"
description = "Python操作文件和文件夹的便捷组件库"
authors = ["张大鹏 <lxgzhw@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zhangdapeng520/zdpapi_file"
repository = "https://github.com/zhangdapeng520/zdpapi_file"
documentation = "https://github.com/zhangdapeng520/zdpapi_file"
keywords = ["zdpapi", "zdpapi_file", "async", "zhangdapeng"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
